<resources>
    <string name="app_name">ClientList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="client">Клиент</string>


    <string name="name">Имя</string>
    <string name="sec_name">Фамилия</string>
    <string name="tel">Телефон</string>
    <string name="important">Важный</string>
    <string name="normal">Обычный</string>
    <string name="no_important">Неважный</string>
    <string name="notice">Заметки</string>
    <string name="special">Особенный</string>

    <string name="importance">Важность</string>
    <string name="settings">Настройки</string>
    <string name="general_settings">Главные настройки</string>
    <string name="web_page">Веб страница</string>

    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="delete_message">Вы действительно хотите удалить клиента?</string>
    <string name="уes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="text_settings">Настройки текста</string>

    <string name="text_color_name">Цвет имени клиента</string>
    <string name="text_color_summary_name">Выберете цвет имени клиента</string>

    <string name="text_color_sec_name">Цвет фамилии клиента</string>
    <string name="text_color_summary_sec_name">Выберете цвет фамилии клиента</string>
    <!--Keys -->
    <string name="text_color_name_key">text_name_color_key</string>
    <string name="text_color_sec_name_key">text_sec_name_color_key</string>


</resources>