<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/text_settings">

        <ListPreference
            android:defaultValue="true"
            android:entries="@array/text_color_array"
            android:entryValues="@array/text_color_array_values"
            android:icon="@drawable/ic_text_color"
            android:key="@string/text_color_name_key"
            android:summary="@string/text_color_summary_name"
            android:title="@string/text_color_name" />
        <ListPreference
            android:defaultValue="true"
            android:entries="@array/text_color_array"
            android:entryValues="@array/text_color_array_values"
            android:icon="@drawable/ic_text_color"
            android:key="@string/text_color_sec_name_key"
            android:summary="@string/text_color_summary_sec_name"
            android:title="@string/text_color_sec_name" />
    </PreferenceCategory>
</PreferenceScreen>